Tue Aug 31 15:06:49 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * DAnCE/DAnCE/DAnCE_Core.mpc:

          Small modification to Will's commit (directly below this): the
          verbatim sections for post-install steps are not needed here.

Tue Aug 31 14:16:26 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_Core.mpc:

          Fixes for installed build.

Tue Aug 31 12:57:15 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/DataReaderStateListener_T.cpp:
        * connectors/dds4ccm/impl/DomainParticipant_T.cpp:
        * connectors/dds4ccm/impl/PortStatusListener_T.cpp:
        * connectors/dds4ccm/impl/PublisherListener_T.cpp:
        * connectors/dds4ccm/impl/Publisher_T.cpp:
        * connectors/dds4ccm/impl/Reader_T.cpp:
        * connectors/dds4ccm/impl/SubscriberListener_T.cpp:
        * connectors/dds4ccm/impl/Subscriber_T.cpp:
        * connectors/dds4ccm/impl/TopicListener_T.cpp:
          Improved logging.

        * connectors/dds4ccm/impl/LocalObject_T.cpp:
        * connectors/dds4ccm/impl/LocalObject_T.h:
          Added constructor in which one can pass the object.

Mon Aug 30 22:26:16 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tools/System_Health/Interceptors/SHS_CORBA_Transport.cpp:
        * DAnCE/tools/System_Health/Interceptors/SHS_Interceptor.h:
        * DAnCE/tools/System_Health/Interceptors/SHS_Interceptor.cpp:

          Fuzz, and some additional meta-data for the interceptor.

Mon Aug 30 11:28:13 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Configuration/Process_Priority.cpp:

          Compile fix for windows.

Mon Aug 30 04:16:06 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/NodeManager/Node_Manager_Module.cpp:

          Fix for segmentation fault.
